infra/k8s/auth-service-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      containers:
        - name: auth-service
          image: us.gcr.io/rare-terminal-309004/auth-service
          volumeMounts:
            - name: rsa-key
              readOnly: true
              mountPath: "/secret/"
      volumes:
        - name: rsa-key
          secret:
            secretName: rsa-jwt
            defaultMode: 0600
---
apiVersion: v1
kind: Service
metadata:
  name: auth-service-srv
spec:
  selector:
    app: auth-service
  ports:
    - name: auth-service
      protocol: TCP
      port: 3000
      targetPort: 3000
